<resources>
    <string name="app_name">Login Orange</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create_an_account">Create An Account</string>
    <string name="name">Name</string>
    <string name="join">Join</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="loggout">Loggout</string>
    <string name="do_you_want_to_send_a_chocolate">Do you want to send a chocolate?</string>
    <string name="under_construction">Under Construction</string>
    <string name="back">Back</string>
    <string name="about_the_dev">About The Dev</string>
    <string name="text_about_dev">Dev: Marcio Franklin\n\nAddress: Rua Boa Esperança, 95 Cond. Graphos, Bloco 11, Apt 103, Turu, São Luís/MA. CEP: 65.0666–190</string>
    <string name="personal_data">Personal Data</string>
</resources>