<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:theme="@style/Theme.Design.NoActionBar"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".activity.FormRegistrationActivity">

        <ImageView
            android:id="@+id/form_registration_logo"
            android:layout_width="152dp"
            android:layout_height="42dp"
            android:layout_marginVertical="60dp"
            android:src="@drawable/orange_android_bw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/form_registration_create_account"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_registration_logo"
            app:layout_constraintBottom_toTopOf="@id/form_registration_name"
            />

        <EditText
            android:id="@+id/form_registration_name"
            style="@style/EditText"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="60dp"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColor="@color/black_overlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_registration_create_account" />

        <EditText
            android:id="@+id/form_registration_username"
            style="@style/EditText"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="26dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textColor="@color/black_overlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_registration_name" />

        <EditText
            android:id="@+id/form_registration_password"
            style="@style/EditText"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="26dp"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black_overlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_registration_username" />

        <Button
            android:id="@+id/form_registration_join"
            style="@style/ButtonConfirm"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="52dp"
            android:padding="14dp"
            android:text="@string/join"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_registration_password" />

        <ProgressBar
            android:id="@+id/form_registration_create_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_registration_have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/form_registration_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/do_you_have_an_account"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_registration_join"
            app:flow_horizontalAlign="center"
            />

        <TextView
            android:id="@+id/form_registration_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="4dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/form_registration_have_account"
            app:layout_constraintTop_toBottomOf="@id/form_registration_join" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>