<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:theme="@style/Theme.Design.NoActionBar"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/about_logo"
        android:src="@drawable/orange_android_color"
        android:layout_width="232dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="100dp"
        />

    <TextView
        android:id="@+id/about_title"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/about_the_dev"
        android:textColor="@color/orange_orange_android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_logo"
        />

    <TextView
        android:id="@+id/about_description"
        style="@style/LongText"
        android:text="@string/text_about_dev"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_title"
        />

    <Button
        android:id="@+id/about_back"
        style="@style/ButtonConfirm"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="52dp"
        android:padding="12dp"
        android:text="@string/back"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_description" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>