<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PersonalDataActivity"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/personal_data_logo"
        android:src="@drawable/orange_android_color"
        android:layout_width="232dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="100dp"
        />

    <TextView
        android:id="@+id/personal_data_title"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/create_an_account"
        android:textColor="@color/orange_orange_android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_data_logo"
        />

    <TextView
        android:id="@+id/personal_data_name"
        style="@style/EditText"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_data_title"
        app:drawableEndCompat="@drawable/ic_person"
        />

    <TextView
        android:id="@+id/personal_data_email"
        style="@style/EditText"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_data_name"
        app:drawableEndCompat="@drawable/ic_email"
        />

    <Button
        android:id="@+id/personal_data_loggout"
        style="@style/ButtonConfirm"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="52dp"
        android:padding="12dp"
        android:text="@string/loggout"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_data_email" />


    <TextView
        android:id="@+id/personal_data_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:text="@string/do_you_want_to_send_a_chocolate"
        android:textColor="@color/orange_light_orange_android"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_data_loggout" />


</androidx.constraintlayout.widget.ConstraintLayout>